--- a/src/blocks/plugin-card/style.scss
+++ b/src/blocks/plugin-card/style.scss
@@ -1,20 +1,9 @@
 .wp-block-themeisle-blocks-plugin-cards {
 	padding: 20px 0;
 
-	&.align-left {
-		float: left;
-	}
-
-	&.align-center {
-		text-align: center;
-	}
-
-	&.align-right {
-		float: right;
-	}
-
-	.wp-block-themeisle-plugin-card {
-		border: 1px #EAEAEA solid;
+	.wp-block-themeisle-blocks-plugin-cards-wrapper {
+		background: #ffffff;
+		border: 1px #eaeaea solid;
 		display: inline-block;
 		width: 350px;
 		font-family: "PT Serif Caption";
@@ -24,20 +13,22 @@
 			text-decoration: none;
 		}
 
-		.card-header {
+		.wp-block-themeisle-blocks-plugin-cards-header {
 			background: #ffffff;
 			text-align: center;
 			padding: 25px;
 
-			.card-logo {
+			.wp-block-themeisle-blocks-plugin-cards-logo {
 				padding: 10px;
+
 				img {
 					width: 128px;
 					height: 128px;
+					display: inline-block;
 				}
 			}
 
-			.card-info {
+			.wp-block-themeisle-blocks-plugin-cards-info {
 				padding: 10px;
 
 				h4 {
@@ -51,7 +42,7 @@
 				}
 			}
 
-			.card-ratings {
+			.wp-block-themeisle-blocks-plugin-cards-ratings {
 				font-family: "Font Awesome 5 Free";
 
 				.star-full:before {
@@ -70,20 +61,20 @@
 			}
 		}
 
-		.card-details {
+		.wp-block-themeisle-blocks-plugin-cards-details {
 			background: #FCFCFC;
 			border-top: 1px #EAEAEA solid;
 			padding: 20px;
 			font-size: 12px;
 			text-align: center;
 
-			.card-description {
+			.wp-block-themeisle-blocks-plugin-cards-description {
 				color: #707070;
 				font-size: 12px;
 				text-align: center;
 			}
 
-			.card-stats {
+			.wp-block-themeisle-blocks-plugin-cards-stats {
 				padding: 25px 0 0 0;
 				text-align: justify;
 
@@ -94,15 +85,15 @@
 					margin: 0;
 				}
 
-				.card-stats-list {
+				.wp-block-themeisle-blocks-plugin-cards-stats-list {
 					display: flex;
 
-					.card-stat {
+					.wp-block-themeisle-blocks-plugin-cards-stat {
 						flex: auto;
 						padding-top: 10px;
 						text-align: center;
 
-						.card-text-large {
+						.wp-block-themeisle-blocks-plugin-cards-text-large {
 							color: #4550ae;
 							font-size: 24px;
 							display: block;
@@ -112,9 +103,14 @@
 			}
 		}
 
-		.card-download {
+		.wp-block-themeisle-blocks-plugin-cards-download {
 			background: #4551af;
 			text-align: center;
+
+			&:hover,
+			&:active {
+				background: #202b82;
+			}
 
 			a {
 				color: #fff;
@@ -128,12 +124,12 @@
 
 @media ( max-width:415px ) {
 	.wp-block-themeisle-blocks-plugin-cards {
-		.wp-block-themeisle-plugin-card {
+		.wp-block-themeisle-blocks-plugin-cards-wrapper {
 			width: auto;
 
-			.card-details {
-				.card-stats {
-					.card-stats-list {
+			.wp-block-themeisle-blocks-plugin-cards-details {
+				.wp-block-themeisle-blocks-plugin-cards-stats {
+					.wp-block-themeisle-blocks-plugin-cards-stats-list {
 						display: block;
 					}
 				}
