--- a/src/components/responsive-control/editor.scss
+++ b/src/components/responsive-control/editor.scss
@@ -1,4 +1,6 @@
 .wp-block-themeisle-blocks-responsive-control {
+	margin: 10px 0;
+
 	.components-base-control__title {
 		display: flex;
 		justify-content: space-between;
@@ -29,15 +31,15 @@
 	}
 }
 
-.wp-block-themeisle-responsiveness-settings {
+.wp-block-themeisle-blocks-responsive-control-settings {
 	padding: 10px;
 
-	.responsiveness-title {
+	.wp-block-themeisle-blocks-responsive-control-settings-title {
 		margin-bottom: 8px;
 		color: #6c7781;
 	}
 
-	.responsiveness-item {
+	.wp-block-themeisle-blocks-responsive-control-settings-item {
 		padding: 10px;
 		width: 100%;
 
