--- a/src/blocks/posts/style.scss
+++ b/src/blocks/posts/style.scss
@@ -4,29 +4,29 @@
 
 	&.is-grid {
 
-		&.posts-grid-columns-2 {
-			.posts-grid-post-blog {
+		&.wp-block-themeisle-blocks-posts-grid-columns-2 {
+			.wp-block-themeisle-blocks-posts-grid-post-blog {
 				flex: 0 0 50%;
 				max-width: 50%;
 			}
 		}
 	
-		&.posts-grid-columns-3 {
-			.posts-grid-post-blog {
+		&.wp-block-themeisle-blocks-posts-grid-columns-3 {
+			.wp-block-themeisle-blocks-posts-grid-post-blog {
 				flex: 0 0 33%;
 				max-width: 33%;
 			}
 		}
 	
-		&.posts-grid-columns-4 {
-			.posts-grid-post-blog {
+		&.wp-block-themeisle-blocks-posts-grid-columns-4 {
+			.wp-block-themeisle-blocks-posts-grid-post-blog {
 				flex: 0 0 25%;
 				max-width: 25%;
 			}
 		}
 	
-		&.posts-grid-columns-5 {
-			.posts-grid-post-blog {
+		&.wp-block-themeisle-blocks-posts-grid-columns-5 {
+			.wp-block-themeisle-blocks-posts-grid-post-blog {
 				flex: 0 0 20%;
 				max-width: 20%;
 			}
@@ -34,22 +34,22 @@
 	}
 
 	&.is-list {
-		.posts-grid-post {
+		.wp-block-themeisle-blocks-posts-grid-post {
 			display: flex;
 	
-			.posts-grid-post-image {
+			.wp-block-themeisle-blocks-posts-grid-post-image {
 				flex-basis: 33.33%;
 				padding: 20px;
 			}
 	
-			.posts-grid-post-body {
+			.wp-block-themeisle-blocks-posts-grid-post-body {
 				flex-basis: 66.66%;
 				padding-top: 20px;
 			}
 		}
 	}
 
-	.posts-grid-post-blog {
+	.wp-block-themeisle-blocks-posts-grid-post-blog {
 		width: 100%;
 		position: relative;
 		margin-bottom: 30px;
@@ -60,10 +60,10 @@
 		word-wrap: break-word;
 		background-clip: border-box;
 
-		.posts-grid-post {
+		.wp-block-themeisle-blocks-posts-grid-post {
 			margin-bottom: 10px;
 
-			.posts-grid-post-image {
+			.wp-block-themeisle-blocks-posts-grid-post-image {
 				position: relative;
 	
 				img {
@@ -73,20 +73,20 @@
 				}
 			}
 
-			.posts-grid-post-body {
+			.wp-block-themeisle-blocks-posts-grid-post-body {
 
 				&.is-full {
 					flex-basis: 100%;
 				}
 	
-				.posts-grid-post-category {
+				.wp-block-themeisle-blocks-posts-grid-post-category {
 					font-size: 12px;
 					text-transform: capitalize;
 					font-weight: 700;
 					margin: 5px 0;
 				}
 		
-				.posts-grid-post-title {
+				.wp-block-themeisle-blocks-posts-grid-post-title {
 					font-size: 18px;
 					margin: 10px 0;
 					line-height: 1.25em;
@@ -101,12 +101,12 @@
 					}
 				}
 		
-				.posts-grid-post-meta {
+				.wp-block-themeisle-blocks-posts-grid-post-meta {
 					font-size: 14px;
 					margin: 10px 0;
 				}
 		
-				.posts-grid-post-description {
+				.wp-block-themeisle-blocks-posts-grid-post-description {
 					font-size: 16px;
 					margin: 10px 0;
 				}}
@@ -120,7 +120,7 @@
 		flex-wrap: wrap;
 	
 		&.is-grid {
-			.posts-grid-post-blog {
+			.wp-block-themeisle-blocks-posts-grid-post-blog {
 				min-width: 33%;
 			}
 		}
@@ -133,22 +133,22 @@
 		flex-wrap: wrap;
 	
 		&.is-grid {
-			.posts-grid-post-blog {
+			.wp-block-themeisle-blocks-posts-grid-post-blog {
 				min-width: 100%;
 			}
 		}
 	
 		&.is-list {
-			.posts-grid-post {
+			.wp-block-themeisle-blocks-posts-grid-post {
 				flex-direction: column;
 				padding: 10px;
 
-				.posts-grid-post-image {
+				.wp-block-themeisle-blocks-posts-grid-post-image {
 					flex-basis: 100%;
 					padding: 0;
 				}
 	
-				.posts-grid-post-body {
+				.wp-block-themeisle-blocks-posts-grid-post-body {
 					flex-basis: 100%;
 					padding: 0;
 				}
