Remove inline CSS from FA Block
This commit removes inline CSS from Font Awesome block, deprecates the
older version and moves the CSS to PHP part.

--- a/src/blocks/font-awesome-icons/style.scss
+++ b/src/blocks/font-awesome-icons/style.scss
@@ -1,3 +1,7 @@
 .wp-block-themeisle-blocks-font-awesome-icons {
 	text-align: center;
+
+	.wp-block-themeisle-blocks-font-awesome-icons-container {
+		display: inline-block;
+	}
 }
