--- a/src/blocks/section/editor.scss
+++ b/src/blocks/section/editor.scss
@@ -1,6 +1,7 @@
 .wp-block-themeisle-blocks-advanced-columns {
 
-	.wp-themeisle-block-overlay {
+	.wp-themeisle-block-overlay,
+	.wp-block-themeisle-blocks-advanced-columns-overlay {
 		position: absolute;
 		width: 100%;
 		height: 100%;
@@ -10,37 +11,43 @@
 
 	&.has-default-gap {
 		.wp-block-themeisle-blocks-advanced-column {
-			margin: 10px;
+			margin-left: 10px;
+			margin-right: 10px;
 		}
 	}
 
 	&.has-nogap-gap {
 		.wp-block-themeisle-blocks-advanced-column {
-			margin: 0;
+			margin-left: 0;
+			margin-right: 0;
 		}
 	}
 
 	&.has-narrow-gap {
 		.wp-block-themeisle-blocks-advanced-column {
-			margin: 5px;
+			margin-left: 5px;
+			margin-right: 5px;
 		}
 	}
 
 	&.has-extended-gap {
 		.wp-block-themeisle-blocks-advanced-column {
-			margin: 15px;
+			margin-left: 15px;
+			margin-right: 15px;
 		}
 	}
 
 	&.has-wide-gap {
 		.wp-block-themeisle-blocks-advanced-column {
-			margin: 20px;
+			margin-left: 20px;
+			margin-right: 20px;
 		}
 	}
 
 	&.has-wider-gap {
 		.wp-block-themeisle-blocks-advanced-column {
-			margin: 30px;
+			margin-left: 30px;
+			margin-right: 30px;
 		}
 	}
 }
