--- a/src/blocks/section/style.scss
+++ b/src/blocks/section/style.scss
@@ -53,19 +53,22 @@
 
 	&.has-vertical-flex-start {
 		.wp-block-themeisle-blocks-advanced-column {
-			align-self: flex-start;
+			display: flex;
+			align-items: flex-start;
 		}
 	}
 
 	&.has-vertical-center {
 		.wp-block-themeisle-blocks-advanced-column {
-			align-self: center;
+			display: flex;
+			align-items: center;
 		}
 	}	
 
 	&.has-vertical-flex-end {
 		.wp-block-themeisle-blocks-advanced-column {
-			align-self: flex-end;
+			display: flex;
+			align-items: flex-end;
 		}
 	}
 
