Add reverse columns option to Section
This adds an option to reverse columns on mobile/tablet devices when
columns are collapsed. closes https://github.com/Codeinwp/gutenberg-blocks/issues/215

--- a/src/blocks/section/editor.scss
+++ b/src/blocks/section/editor.scss
@@ -400,7 +400,13 @@
 
 		&.has-tablet-collapsedRows-layout {
 			> .innerblocks-wrap > .editor-inner-blocks > .editor-block-list__layout {
-				display: block;
+				flex-direction: column;
+			}
+
+			&.has-reverse-columns-tablet {
+				> .innerblocks-wrap > .editor-inner-blocks > .editor-block-list__layout {
+					flex-direction: column-reverse;
+				}
 			}
 		}
 
@@ -537,7 +543,13 @@
 
 		&.has-mobile-collapsedRows-layout {
 			> .innerblocks-wrap > .editor-inner-blocks > .editor-block-list__layout {
-				display: block;
+				flex-direction: column;
+			}
+
+			&.has-reverse-columns-mobile {
+				> .innerblocks-wrap > .editor-inner-blocks > .editor-block-list__layout {
+					flex-direction: column-reverse;
+				}
 			}
 		}
 
