Fix slider inside Columns
As reported by Rodica, Slider Block didn't work inside the Section
block.

--- a/src/blocks/section/editor.scss
+++ b/src/blocks/section/editor.scss
@@ -9,6 +9,12 @@
 		left: 0;
 	}
 
+	.wp-block-themeisle-blocks-advanced-column {
+		.wp-block-themeisle-blocks-slider {
+			display: grid;
+		}
+	}
+
 	&.has-default-gap {
 		.wp-block-themeisle-blocks-advanced-column {
 			margin-left: 10px;
