--- a/src/blocks/posts/editor.scss
+++ b/src/blocks/posts/editor.scss
@@ -212,6 +212,7 @@
 		}
 
 		.wp-block-themeisle-blocks-posts-grid-builder-button {
+			height: auto;
 			flex-basis: 20%;
 			justify-content: center;
 			padding: 10px 5px;
