--- a/src/components/link-control/editor.scss
+++ b/src/components/link-control/editor.scss
@@ -26,8 +26,9 @@
 		}
 	}
 
-	.components-icon-button {
+	.components-button {
 		flex-basis: 15%;
+		height: auto;
 		justify-content: center;
 		padding-top: 0px;
 		padding-bottom: 0px;
