--- a/src/blocks/button-group/editor.scss
+++ b/src/blocks/button-group/editor.scss
@@ -6,6 +6,7 @@
 	.header-tab {
 		display: inline-block;
 		width: calc( 100% / 2 );
+		height: auto;
 		padding: 10px 20px;
 		text-align: center;
 		cursor: pointer;
@@ -16,7 +17,10 @@
 		}
 
 		&:hover {
-			background: #f3f4f5;
+			&:not(:disabled):not([aria-disabled="true"]):not(.is-secondary):not(.is-primary):not(.is-tertiary):not(.is-link) {
+				background: #f3f4f5;
+				box-shadow: none;
+			}
 		}
 
 		span {
@@ -33,45 +37,54 @@
 	}
 }
 
-.wp-block-themeisle-blocks-select-button-button {
-	background: transparent;
-	position: relative;
-	width: 100%;
-	box-shadow: 0 0 0 transparent;
-	transition: box-shadow .1s linear;
-	border-radius: 4px;
-	border: 1px solid #8d96a0;
-	
-	&.is-button {
-		background: transparent;
-	}
-	
-	&:hover {
-		background: #fafafa;
-		border-color: #999;
-		box-shadow: inset 0 -1px 0 #999;
-		color: #23282d;
-		text-decoration: none;
-	}
-	
-	&:focus {
-		border: 1px solid black;
-	}
+.wp-block-themeisle-blocks-select-button-container {
+	.components-dropdown {
+		display: flex;
 
-	&:after {
-		content: "";
-		pointer-events: none;
-		display: block;
-		width: 0;
-		height: 0;
-		border-left: 3px solid transparent;
-		border-right: 3px solid transparent;
-		border-top: 5px solid currentColor;
-		margin-left: 4px;
-		margin-right: 2px;
-		right: 8px;
-		top: 12px;
-		position: absolute;
+		.wp-block-themeisle-blocks-select-button-button {
+			background: transparent;
+			position: relative;
+			width: 100%;
+			height: auto;
+			line-height: 28px;
+			padding: 0 12px 2px;
+			box-shadow: 0 0 0 transparent;
+			transition: box-shadow .1s linear;
+			border-radius: 4px;
+			border: 1px solid #8d96a0;
+			
+			&.is-button {
+				background: transparent;
+			}
+			
+			&:hover {
+				background: #fafafa;
+				border-color: #999;
+				box-shadow: inset 0 -1px 0 #999;
+				color: #23282d;
+				text-decoration: none;
+			}
+			
+			&:focus {
+				border: 1px solid black;
+			}
+	
+			&:after {
+				content: "";
+				pointer-events: none;
+				display: block;
+				width: 0;
+				height: 0;
+				border-left: 3px solid transparent;
+				border-right: 3px solid transparent;
+				border-top: 5px solid currentColor;
+				margin-left: 4px;
+				margin-right: 2px;
+				right: 8px;
+				top: 12px;
+				position: absolute;
+			}
+		}
 	}
 }
 
@@ -127,7 +140,8 @@
 
 	.wp-block-themeisle-blocks-button {
 		cursor: text;
-		display: inline-block;
+		display: flex;
+		align-items: center;
 		margin: 0;
 		text-align: center;
 		text-decoration: none;
@@ -161,6 +175,9 @@
 	.components-button {
 		width: calc( 100% / 2 );
 		justify-content: center;
+		border: 1px solid #000;
+		height: 30px;
+		line-height: 28px;
 	}
 }
 
@@ -225,6 +242,20 @@
 
 			.wp-block-themeisle-blocks-button {
 				margin: 10px 0 !important;
+			}
+		}
+	}
+}
+
+@media ( max-width: 782px ) {
+	.wp-block-themeisle-blocks-select-button-container {
+		.components-dropdown {	
+			.wp-block-themeisle-blocks-select-button-button {
+				padding: 5px 24px 5px 8px;
+		
+				&:after {
+					top: 16px;
+				}
 			}
 		}
 	}
