--- a/src/blocks/sharing-icons/editor.scss
+++ b/src/blocks/sharing-icons/editor.scss
@@ -79,6 +79,17 @@
 }
 
 .wp-block-themeisle-toolbar {
-	width: 20px;
-	height: 20px;
+	&.is-active {
+
+		.wp-block-themeisle-toolbar-icon {
+			color: #fff;
+			background: #555d66;
+		}
+	}
+
+	.wp-block-themeisle-toolbar-icon {
+		width: 20px;
+		height: 20px;
+		padding: 5px;
+	}
 }
