--- a/src/components/html-anchor-control/editor.scss
+++ b/src/components/html-anchor-control/editor.scss
@@ -16,26 +16,28 @@
 	}
 
 	button {
-		&.components-icon-button {
-			&.components-button {
-				&.wp-block-themeisle-blocks-html-anchor-control-button {
-					min-height: 30px;
-					width: 100%;
-					display: flex;
-					border: 1px solid #8d96a0;
-					justify-content: center;
-					border-top-left-radius: 0;
-					border-bottom-left-radius: 0;
+		&.wp-block-themeisle-blocks-html-anchor-control-button {
+			height: 30px;
+			width: 100%;
+			display: flex;
+			border: 1px solid #8d96a0;
+			justify-content: center;
+			border-top-left-radius: 0;
+			border-bottom-left-radius: 0;
 
-					&.is-saved {
+			&.is-saved {
+				background: #a4afb7;
+				color: #fff;
+				border: 1px solid #8d96a0;
+				justify-content: center;
+				border-top-left-radius: 0;						
+				border-bottom-left-radius: 0;
+
+				&:hover {
+					&:not(:disabled):not([aria-disabled="true"]):not(.is-secondary):not(.is-primary):not(.is-tertiary):not(.is-link) {
 						background: #a4afb7;
 						color: #fff;
-			
-						&:hover {
-							background: #a4afb7;
-							color: #fff;
-							box-shadow: inset 0 0 0 1px #e2e4e7, inset 0 0 0 2px #a4afb7, 0 1px 1px rgba(25, 30, 35, 0.2);
-						}
+						box-shadow: inset 0 0 0 1px #e2e4e7, inset 0 0 0 2px #a4afb7, 0 1px 1px rgba(25, 30, 35, 0.2);
 					}
 				}
 			}
