--- a/src/components/responsive-control/editor.scss
+++ b/src/components/responsive-control/editor.scss
@@ -14,6 +14,9 @@
 			display: flex;
 
 			button {
+				height: 28px;
+				border: 1px solid #555d66;
+
 				&.is-primary {
 					z-index: 0;
 
@@ -44,11 +47,19 @@
 		width: 100%;
 
 		&:hover {
-			box-shadow: inset 0 0 0 1px #6c7781,inset 0 0 0 2px #fff;
+			&:not(:disabled):not([aria-disabled="true"]):not(.is-secondary):not(.is-primary):not(.is-tertiary):not(.is-link) {
+				box-shadow: inset 0 0 0 1px #6c7781,inset 0 0 0 2px #fff;
+				background: #edeff0;
+				border-radius: 0;
+			}
 		}
 
 		&.is-selected {
-			background: #edeff0;
+			&:not(:disabled):not([aria-disabled="true"]):not(.is-secondary):not(.is-primary):not(.is-tertiary):not(.is-link) {
+				box-shadow: inset 0 0 0 1px #6c7781,inset 0 0 0 2px #fff;
+				background: #edeff0;
+				border-radius: 0;
+			}
 		}
 
 		.popover-title {
