--- a/src/components/sizing-control/editor.scss
+++ b/src/components/sizing-control/editor.scss
@@ -18,7 +18,7 @@
 				min-height: 28px;
 				border-radius: 0;
 				text-align: center;
-				padding: 5px;
+				padding: 0 5px;
 
 				&[disabled] {
 					background-color: #e6e9ec;
@@ -68,7 +68,11 @@
 						color: #fff;
 
 						&:hover {
-							box-shadow: inset 0 0 0 1px #e2e4e7,inset 0 0 0 2px #a4afb7,0 1px 1px rgba(25,30,35,.2);
+							&:not(:disabled):not([aria-disabled="true"]):not(.is-secondary):not(.is-primary):not(.is-tertiary):not(.is-link) {
+								background: #a4afb7;
+								color: #fff;
+								box-shadow: inset 0 0 0 1px #e2e4e7,inset 0 0 0 2px #a4afb7,0 1px 1px rgba(25,30,35,.2);
+							}
 						}
 					}
 				}
@@ -83,19 +87,5 @@
 	.dashicons-plus {
 		margin-left: 10px;
 		margin-right: 5px;
-	}
-}
-
-@media ( max-width: 782px ) {
-	.wp-block-themeisle-blocks-sizing-control {
-		.wp-block-themeisle-blocks-sizing-control-wrapper {
-			.wp-block-themeisle-blocks-sizing-control-item {
-				&.toggle-linking {
-					.wp-block-themeisle-blocks-sizing-control-item-input {
-						height: 40px;
-					}
-				}
-			}
-		}
 	}
 }
