--- a/src/components/style-switcher-control/editor.scss
+++ b/src/components/style-switcher-control/editor.scss
@@ -3,8 +3,9 @@
 	grid-template-columns: 50% 50%;
 	grid-row-gap: 5px;
 
-	.blocks-style-switcher-item {
+	.wp-block-themeisle-blocks-style-switcher-item {
 		display: block;
+		height: auto;
 		margin: 0 4px;
 		padding: 5px;
 		flex-basis: 50%;
@@ -24,7 +25,7 @@
 			box-shadow: 0 0 0 2px #00a0d2;
 		}
 
-		.blocks-style-switcher-item-preview {
+		.wp-block-themeisle-blocks-style-switcher-item-preview {
 
 			img {
 				border: 1px solid #dcddde;
@@ -32,7 +33,7 @@
 			}
 		}
 
-		.blocks-style-switcher-item-label {
+		.wp-block-themeisle-blocks-style-switcher-item-label {
 			text-align: center;
 		}
 	}
