--- a/src/components/html-anchor-control/editor.scss
+++ b/src/components/html-anchor-control/editor.scss
@@ -20,6 +20,7 @@
 			height: 30px;
 			width: 100%;
 			display: flex;
+			padding: 0;
 			border: 1px solid #8d96a0;
 			justify-content: center;
 			border-top-left-radius: 0;
