--- a/src/components/responsive-control/editor.scss
+++ b/src/components/responsive-control/editor.scss
@@ -35,36 +35,78 @@
 }
 
 .wp-block-themeisle-blocks-responsive-control-settings {
-	padding: 10px;
-
 	.wp-block-themeisle-blocks-responsive-control-settings-title {
 		margin-bottom: 8px;
 		color: #6c7781;
 	}
 
 	.wp-block-themeisle-blocks-responsive-control-settings-item {
-		padding: 10px;
+		padding: 6px 12px 6px 40px;
 		width: 100%;
+		margin: 2px 0;
 
-		&:hover {
-			&:not(:disabled):not([aria-disabled="true"]):not(.is-secondary):not(.is-primary):not(.is-tertiary):not(.is-link) {
-				box-shadow: inset 0 0 0 1px #6c7781,inset 0 0 0 2px #fff;
-				background: #edeff0;
-				border-radius: 0;
-			}
+		svg {
+			margin-right: 10px;
 		}
 
-		&.is-selected {
-			&:not(:disabled):not([aria-disabled="true"]):not(.is-secondary):not(.is-primary):not(.is-tertiary):not(.is-link) {
-				box-shadow: inset 0 0 0 1px #6c7781,inset 0 0 0 2px #fff;
-				background: #edeff0;
+		&:not(:disabled):not([aria-disabled="true"]):not(.is-secondary):not(.is-primary):not(.is-tertiary):not(.is-link) {
+			&:hover {
+				box-shadow: none;
 				border-radius: 0;
+
+				.popover-title {
+					color: #007cba;
+				}
+			}
+
+			&.is-selected {
+				box-shadow: none;
+				border-radius: 0;
+				padding-left: 6px;
+			}
+
+			&:focus {
+				box-shadow: 0 0 0 2px #007cba;
 			}
 		}
 
 		.popover-title {
 			color: #40464d;
-			padding-left: 5px;
+		}
+	}
+}
+
+.branch-5-4,
+.branch-5-3,
+.branch-5-2 {
+	.wp-block-themeisle-blocks-responsive-control-settings {
+		padding: 7px 0;
+
+		.wp-block-themeisle-blocks-responsive-control-settings-title {
+			padding: 0 7px;
+		}
+
+		.wp-block-themeisle-blocks-responsive-control-settings-item {
+			margin: 0;
+			height: 36px;
+			display: flex;
+			align-items: center;
+
+			&:not(:disabled):not([aria-disabled="true"]):not(.is-secondary):not(.is-primary):not(.is-tertiary):not(.is-link) {
+				&:hover {
+					background: #f3f4f5;
+
+					.popover-title {
+						color: #40464d;
+					}
+				}
+
+				&:focus {
+					outline-offset: -2px;
+					outline: 1px dotted #555d66;
+					box-shadow: none;
+				}
+			}
 		}
 	}
 }
