--- a/src/blocks/about-author/editor.scss
+++ b/src/blocks/about-author/editor.scss
@@ -1,76 +1,1 @@
-.wp-block-themeisle-blocks-about-author {
-    border: 0;
-    margin-bottom: 30px;
-    border-radius: 6px;
-    color: rgba(0,0,0,.87);
-    width: 100%;
-    position: relative;
-    display: flex;
-    min-width: 0;
-	word-wrap: break-word;
-
-	.wp-block-themeisle-author-image {
-		width: 16.66666667%;
-		float: left;
-		max-width: 96px;
-		max-height: 96px;
-		margin: auto 15px;
-
-		.author-image {
-			width: 100%;
-			height: auto;
-			box-shadow: 0 16px 38px -12px rgba(0, 0, 0, 0.56), 0 4px 25px 0 rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
-			border-radius: 50%;
-
-			&:hover {
-				opacity: 0.8;
-			}
-		}
-	}
-
-	.wp-block-themeisle-author-data {
-		width: 83.33333333%;
-		float: left;
-		margin: 0 15px;
-
-		p {
-			font-size: 14px;
-		}
-	}
-}
-
-.wp-block-themeisle-author-loading {
-	display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 1em;
-    min-height: 200px;
-    text-align: center;
-	background: #f8f9f9;
-
-	.wp-block-themeisle-author-loading-text {
-		font-size: 13px;
-		font-family: -apple-system, BlinkMacSystemFont,"Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell,"Helvetica Neue", sans-serif;
-		margin: 10px;
-	}
-}
-
-@media ( max-width:961px ) {
-	.wp-block-themeisle-blocks-about-author {
-		display: inline-block;
-		text-align: center;
-
-		.wp-block-themeisle-author-image {
-			width: auto;
-			float: none;
-			max-width: 130px;
-			max-height: 130px;
-			margin: auto;
-		}
-		.wp-block-themeisle-author-data {
-			width: auto;
-			float: none;
-		}
-	}
-}
+@import 'style';
