--- a/src/blocks/slider/style.scss
+++ b/src/blocks/slider/style.scss
@@ -54,4 +54,30 @@
 			}
 		}
 	}
+
+	.amp-carousel-slide {
+		.wp-block-themeisle-blocks-slider-item {
+			width: 100%;
+			height: 100%;
+			-o-object-fit: cover;
+			object-fit: cover;
+		}
+	
+		figcaption {
+			position: absolute;
+			bottom: 0;
+			width: 100%;
+			max-height: 100%;
+			overflow-y: auto;
+			z-index: 20;
+			white-space: pre-wrap;
+			overflow: auto;
+			padding: 40px 10px 9px;
+			color: #fff;
+			text-align: center;
+			font-size: 16px;
+			background: linear-gradient(0deg, rgba(0,0,0,0.7), rgba(0,0,0,0.3) 70%, transparent);
+			cursor: text;
+		}
+	}
 }
