--- a/src/components/template-library/editor.scss
+++ b/src/components/template-library/editor.scss
@@ -316,18 +316,12 @@
 		}
 
 		.library-modal-preview {
-			background: #f2f2f3;   
 			height: 750px;
 			max-height: 85vh;
-			overflow: hidden;
 			padding: 25px 30px 30px;
 
-			iframe {
-				width: 150%;
-				height: 150%;
-				-webkit-transform: scale(.666) translateX(-25%) translateY(-25%);
-				-ms-transform: scale(.666) translateX(-25%) translateY(-25%);
-				transform: scale(.666) translateX(-25%) translateY(-25%);
+			.block-editor-block-preview__container {
+				background: #ffffff;
 			}
 		}
 
@@ -340,10 +334,6 @@
 				margin-right: 10px;
 			}
 		}
-	}
-
-	&.is-preview {
-		overflow: hidden;
 	}
 }
 
