Add Block Preview
Fixes https://github.com/Codeinwp/gutenberg-blocks/issues/296

--- a/src/components/template-library/editor.scss
+++ b/src/components/template-library/editor.scss
@@ -322,6 +322,10 @@
 
 			.block-editor-block-preview__container {
 				background: #ffffff;
+
+				.wp-block {
+					max-width: none;
+				}
 			}
 		}
 
