--- a/src/blocks/section/deprecated.scss
+++ b/src/blocks/section/deprecated.scss
@@ -84,6 +84,7 @@
 				> [data-type="themeisle-blocks/advanced-column"] {
 					display: flex;
 					flex-direction: column;
+					margin: 0 auto;
 					width: 0;
 		
 					.editor-block-list__block-edit {
