Remove legacy code

--- a/src/blocks/section/editor.scss
+++ b/src/blocks/section/editor.scss
@@ -90,6 +90,7 @@
 
 		.wp-themeisle-block-advanced-column-resize-container {
 			display: flex;
+			background: transparent;
 
 			.wp-block-themeisle-blocks-advanced-column {
 				flex-grow: 1;
