--- a/src/blocks/slider/editor.scss
+++ b/src/blocks/slider/editor.scss
@@ -77,13 +77,21 @@
 			}
 		}
 
-		.block-editor-rich-text {
+		.wp-block-themeisle-editor-rich-text {
 			position: absolute;
 			bottom: 0;
 			width: 100%;
 			max-height: 100%;
 			overflow-y: auto;
 			z-index: 20;
+			white-space: pre-wrap;
+			overflow: auto;
+			padding: 40px 10px 9px;
+			color: #fff;
+			text-align: center;
+			font-size: 16px;
+			background: linear-gradient(0deg, rgba(0,0,0,.7),rgba(0,0,0,.3) 70%, transparent);
+			cursor: text;
 
 			figcaption {
 				white-space: pre-wrap;
