--- a/src/blocks/posts/editor.scss
+++ b/src/blocks/posts/editor.scss
@@ -191,6 +191,10 @@
 			padding: 15px 0;
 			cursor: move;
 
+			&:focus {
+				box-shadow: inset 0 0 0 1px #6c7781,inset 0 0 0 2px #fff;
+			}
+
 			span {
 				display: flex;
 				align-self: center;
