--- a/src/blocks/slider/editor.scss
+++ b/src/blocks/slider/editor.scss
@@ -165,7 +165,11 @@
 		}
 	}
 
-	.components-button {
+	.is-sorting {
+		opacity: 0.25;
+	}
+
+	.components-button.is-primary {
 		width: 75px;
 		height: 75px;
 		background: #d5dadf;
@@ -197,8 +201,35 @@
 	box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.2);
 	cursor: move;
 
-	&:focus {
+	&.is-selected {
 		box-shadow: 0 0 0 1px #fff,0 0 0 3px #007cba;
+
+		&:hover { 
+			box-shadow: 0 0 0 1px #fff,0 0 0 3px #007cba !important;
+		}
+
+		&:focus { 
+			box-shadow: 0 0 0 1px #fff,0 0 0 3px #007cba !important;
+		}
+	}
+
+	&:focus { 
+		background-blend-mode: luminosity;
+	}
+
+	.wp-block-themeisle-blocks-slider-images-grid__image__count {
+		background: var(--wp-admin-theme-color);
+		color: #fff;
+		width: 25px;
+		height: 25px;
+		border-radius: 100%;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		border: 1px solid rgb(255, 255, 255);
+		top: -40px;
+		position: relative;
+		left: 50px;
 	}
 }
 
