--- a/src/components/image-grid/editor.scss
+++ b/src/components/image-grid/editor.scss
@@ -1,4 +1,4 @@
-.wp-block-themeisle-blocks-slider-images-grid {
+.wp-block-themeisle-blocks-images-grid-component {
 	display: grid;
 	grid-template-columns: auto auto auto;
 	grid-column-gap: 10px;
@@ -7,7 +7,7 @@
 	&.is-single {
 		justify-content: start;
 
-		.wp-block-themeisle-blocks-slider-images-grid__image {
+		.wp-block-themeisle-blocks-images-grid-component__image {
 			margin-right: 5px;
 		}
 	}
@@ -26,7 +26,7 @@
 		display: flex;
 		justify-content: center;
 		align-content: center;
-		cursor: move;
+		cursor: pointer;
 
 		svg {
 			width: 36px;
@@ -36,7 +36,7 @@
 	}
 }
 
-.wp-block-themeisle-blocks-slider-images-grid__image {
+.wp-block-themeisle-blocks-images-grid-component__image {
 	width: 75px;
 	height: 75px;
 	background-size: cover;
@@ -61,7 +61,7 @@
 		background-blend-mode: luminosity;
 	}
 
-	.wp-block-themeisle-blocks-slider-images-grid__image__count {
+	.wp-block-themeisle-blocks-images-grid-component__image__count {
 		background: #007cba;
 		color: #fff;
 		width: 25px;
@@ -78,7 +78,7 @@
 }
 
 @media ( min-width: 540px ) and ( max-width: 782px ) {
-	.wp-block-themeisle-blocks-slider-images-grid {
+	.wp-block-themeisle-blocks-images-grid-component {
 		grid-template-columns: auto auto auto auto auto auto;
 	}
 }
