--- a/src/components/image-grid/editor.scss
+++ b/src/components/image-grid/editor.scss
@@ -28,6 +28,12 @@
 		align-content: center;
 		cursor: pointer;
 
+		&.has-trash {
+			&:hover {
+				background: #EB553C;
+			}
+		}
+
 		svg {
 			width: 36px;
 			height: 36px;
