Revert "Merge branch 'development'"
This reverts commit 60e55374370746ce06c0e311d0398cf6c9d5bcc3, reversing
changes made to 4935fd74d56f2e3e139c4be7eaa9dd0760b0b196.

--- a/src/blocks/button-group/style.scss
+++ b/src/blocks/button-group/style.scss
@@ -1,32 +1,33 @@
 .wp-block-themeisle-blocks-button-group {
-	&.align-left {
-		text-align: left;
-	}
-
-	&.align-center {
-		text-align: center;
-	}
-
-	&.align-right {
-		text-align: right;
-	}
+	display: flex;
+	margin-bottom: 0;
+	position: relative;
 
 	&.collapse-desktop {
+		flex-direction: column;
+
 		.wp-block-themeisle-blocks-button {
-			display: block;
+			margin: 10px 0 !important;
 		}
 	}
 
 	.wp-block-themeisle-blocks-button {
+		cursor: pointer;
+		margin: 0;
+		text-align: center;
+		text-decoration: none;
+		white-space: normal;
+		overflow-wrap: break-word;
+		height: 100%;
+	}
 
-		i {
-			&.margin-left {
-				margin-left: 10px;
-			}
-		
-			&.margin-right {
-				margin-right: 10px;
-			}
+	i {
+		&.margin-left {
+			margin-left: 10px;
+		}
+	
+		&.margin-right {
+			margin-right: 10px;
 		}
 	}
 }
@@ -34,8 +35,10 @@
 @media ( max-width: 960px ) {
 	.wp-block-themeisle-blocks-button-group {
 		&.collapse-tablet {
+			flex-direction: column;
+
 			.wp-block-themeisle-blocks-button {
-				display: block;
+				margin: 10px 0 !important;
 			}
 		}
 	}
@@ -44,8 +47,10 @@
 @media ( max-width: 600px ) {
 	.wp-block-themeisle-blocks-button-group {
 		&.collapse-mobile {
+			flex-direction: column;
+
 			.wp-block-themeisle-blocks-button {
-				display: block;
+				margin: 10px 0 !important;
 			}
 		}
 	}
