--- a/src/blocks/slider/editor.scss
+++ b/src/blocks/slider/editor.scss
@@ -36,17 +36,17 @@
 			top: 2px;
 			left: 2px;
 			background:#fff;
-			border: 1px solid rgba(30, 30, 30, 1);
-			border-radius: 2px;
+			border: 1px solid rgba(66,88,99,.4);
+			border-radius: 4px;
 			transition: box-shadow .2s ease-out;
 			margin: 8px;
 			display: inline-flex;
 			z-index: 20;
 
 			.components-button {
-				color: rgba(30, 30, 30, 1);
-				padding: 6px;
-				min-width: 36px;
+				color: rgba(14,28,46,.62);
+				padding: 2px;
+				height: 24px;
 
 				&:hover {
 					box-shadow: none;
@@ -59,17 +59,17 @@
 			top: 2px;
 			right: 2px;
 			background:#fff;
-			border: 1px solid rgba(30, 30, 30, 1);
-			border-radius: 2px;
+			border: 1px solid rgba(66,88,99,.4);
+			border-radius: 4px;
 			transition: box-shadow .2s ease-out;
 			margin: 8px;
 			display: inline-flex;
 			z-index: 20;
 
 			.components-button {
-				color: rgba(30, 30, 30, 1);
-				padding: 6px;
-				min-width: 36px;
+				color: rgba(14,28,46,.62);
+				padding: 2px;
+				height: 24px;
 
 				&:hover {
 					box-shadow: none;
@@ -77,21 +77,13 @@
 			}
 		}
 
-		.block-editor-rich-text__editable {
+		.block-editor-rich-text {
 			position: absolute;
 			bottom: 0;
 			width: 100%;
 			max-height: 100%;
 			overflow-y: auto;
 			z-index: 20;
-			white-space: pre-wrap;
-			overflow: auto;
-			padding: 40px 10px 9px;
-			color: #fff;
-			text-align: center;
-			font-size: 16px;
-			background: linear-gradient(0deg, rgba(0,0,0,.7),rgba(0,0,0,.3) 70%, transparent);
-			cursor: text;
 
 			figcaption {
 				white-space: pre-wrap;
@@ -138,7 +130,9 @@
 	}
 }
 
+
 .wp-block-themeisle-blocks-slider-resizer {
+
 	&.is-focused {
 		.components-resizable-box__handle {
 			display: block;
@@ -150,4 +144,3 @@
 .wp-block-themeisle-blocks-slider-uploader {
 	margin: 20px 0;
 }
-
