Fix Slider AMP Mobile problem for Section

--- a/src/blocks/section/style.scss
+++ b/src/blocks/section/style.scss
@@ -414,7 +414,7 @@
 		position: relative;
 
 		.innerblocks-wrap {
-			display: flex;
+			display: grid;
 			flex-basis: 100%;
 			word-break: keep-all;
 
